--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "colorette": "^2.0.20",
     "copyfiles": "^2.4.1",
     "cors": "^2.8.5",
+    "csv-parse": "^6.1.0",
     "dotenv": "^17.2.1",
     "dotenv-flow": "^4.1.0",
     "error-stack-parser": "^2.1.4",
@@ -68,6 +69,7 @@
     "@types/bcrypt": "^5.0.2",
     "@types/bcryptjs": "^3.0.0",
     "@types/cors": "^2.8.17",
+    "@types/csv-parse": "^1.1.12",
     "@types/eslint": "^9.6.1",
     "@types/express": "^5.0.0",
     "@types/jsonwebtoken": "^9.0.7",
