feat: Enhance payment processing with currency detection and conversion
- Added CurrencyDetectionService to normalize and detect currencies based on client location.
- Integrated currency conversion logic in ProjectPaymentService and FreelancerPayoutService to handle payments in various currencies.
- Updated ProjectPaymentController to select preferred currency from the project and normalize client currency.
- Introduced CurrencyConversionService for fetching and caching exchange rates.
- Implemented support for Stripe Connect onboarding with a new endpoint to list supported countries.
- Enhanced refund processing to handle platform and freelancer currencies correctly.
- Updated TypeScript configuration to include scripts directory.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -106,7 +106,7 @@
     "exactOptionalPropertyTypes": false, // Temporarily disabled to allow undefined to be assigned to nullable fields
     "useUnknownInCatchVariables": true // Enforces
   },
-  "include": ["src/**/*", "tests/**/*"],
+  "include": ["src/**/*", "tests/**/*", "scripts/**/*"],
   "exclude": [
     "node_modules",
     "dist",
