feat: Add client brief document upload and retrieval functionality

--- a/.env
+++ b/.env
@@ -1,6 +1,7 @@
 JWT_SECRET="AdGdhclgLTexQ2hdpg0esP$$4fK!tcOF"
+# DATABASE_URL=postgresql://postgres:admin@localhost:5432/pls_backend
 DATABASE_URL=postgresql://postgres:admin@localhost:5432/pls_backend
-
+PORT=8000
 
 SMTP_HOST_EMAIL="primelogicsolution@gmail.com"
 SMTP_SECRET="ltcbmdewvxcctsii"
