--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "lint:fix": "eslint . --fix",
     "type-check": "tsc --noEmit",
     "fmt": "prettier --write .",
-    "copy": "copyfiles -u 1 ./src/templates/**/* ./dist/src/",
+    "copy": "copyfiles -u 1 ./src/templates/**/* ./dist/src/ && copyfiles -u 1 ./src/swagger/**/* ./dist/src/",
     "prebuild": "rm -rf ./dist && bun run lint && bun run fmt",
     "build": "bun run tsc --build  && bun run copy",
     "dev": "bun run build  && nodemon  ./src/server.ts",
