Add generate-swagger script to package.json

--- a/package.json
+++ b/package.json
@@ -11,9 +11,10 @@
     "type-check": "tsc --noEmit",
     "fmt": "prettier --write .",
     "copy": "copyfiles -u 1 ./src/templates/**/* ./dist/src/ && copyfiles -u 1 ./src/swagger/**/* ./dist/src/",
+    "generate-swagger": "node scripts/generate-swagger.js",
     "prebuild": "rm -rf ./dist && bun run lint && bun run fmt",
-    "build": "bun run tsc --build  && bun run copy",
-    "dev": "bun run build  && nodemon  ./src/server.ts",
+    "build": "bun run tsc --build && bun run copy && bun run generate-swagger",
+    "dev": "bun run build && nodemon ./src/server.ts",
     "start": "bun run build && node --env-file .env ./dist/src/server.js",
     "commit-lint": "commitlint  --edit",
     "precommit": "bun run lint && bun run fmt && git add .",
